// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration test vineyards create vineyard mutation fails if logged in and not admin 1`] = `
Object {
  "data": Object {
    "createVineyard": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "FORBIDDEN",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to be Admin to continue",
      "path": Array [
        "createVineyard",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards create vineyard mutation fails if not logged in 1`] = `
Object {
  "data": Object {
    "createVineyard": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to login to continue",
      "path": Array [
        "createVineyard",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards create vineyard mutation successfull if logged in and admin 1`] = `
Object {
  "data": Object {
    "createVineyard": Object {
      "errors": Array [],
      "response": Object {
        "colore": "BIANCA",
        "name": "Uva vinosa",
      },
    },
  },
}
`;

exports[`Integration test vineyards delete vineyard mutation fails if logged in and not admin 1`] = `
Object {
  "data": Object {
    "deleteVineyard": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "FORBIDDEN",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to be Admin to continue",
      "path": Array [
        "deleteVineyard",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards delete vineyard mutation succeds if logged in and admin 1`] = `
Object {
  "data": Object {
    "deleteVineyard": Object {
      "errors": Array [],
      "response": Object {
        "colore": null,
        "name": "Vinotto",
      },
    },
  },
}
`;

exports[`Integration test vineyards query single vineyard fails if not logged 1`] = `
Object {
  "data": Object {
    "vineyard": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to login to continue",
      "path": Array [
        "vineyard",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards query single vineyard succeds if logged 1`] = `
Object {
  "data": Object {
    "vineyard": Object {
      "colore": null,
      "name": "Abrusco",
    },
  },
}
`;

exports[`Integration test vineyards query vineyards fails if not logged in 1`] = `
Object {
  "data": Object {
    "vineyards": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to login to continue",
      "path": Array [
        "vineyards",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards query vineyards succeds if logged in 1`] = `
Object {
  "data": Object {
    "vineyards": Array [
      Object {
        "colore": null,
        "name": "Abrusco",
      },
    ],
  },
}
`;

exports[`Integration test vineyards update vineyard mutation fails if logged in and not admin 1`] = `
Object {
  "data": Object {
    "updateVineyard": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "FORBIDDEN",
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You need to be Admin to continue",
      "path": Array [
        "updateVineyard",
      ],
    },
  ],
}
`;

exports[`Integration test vineyards update vineyard mutation succeds if logged in and admin 1`] = `
Object {
  "data": Object {
    "updateVineyard": Object {
      "errors": Array [],
      "response": Object {
        "colore": null,
        "name": "Vinotto",
      },
    },
  },
}
`;
